svn changeset:71 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -1,45 +1,76 @@
 <html>
 <head>
-<title>Millstone User Interface Library 4</title>
-<link href="doc/manual/html-style/local.css" rel="stylesheet" type="text/css" />
+<title>Enably Toolkit 4</title>
 </head>
 <body>
+<script type="text/javascript" src="doc/manual/html-style/style.js"></script><script type="text/javascript">style('doc/manual/html-style');</script>
 
-<script type="text/javascript" src="doc/manual/html-style/style.js"></script>
+<table width="100%" border="0">
 
-<b><pre>[ DRAFTING - 1.10.2006 Joonas ]</pre></b>
+<tr><td width="50%" valign="top">
 
-<h1>Millstone User Interface Library 4</h1>
+<h2>Intro</h2>
 
-Welcome...
+<div class="front-page-box">
+(what is enably toolkit)
+</div>
 
 <h2>Demo</h2>
 
+<div class="front-page-box">
 (how to start up the demo)
-
-<h2>Getting started</h2>
-
-(pointer to manual)
-
-<h2>Documentation</h2>
-
-<ul>
-	<li><a href="doc/manual/index.html">Manual</a></lI>
-	<li><a href="doc/api/index.html">API Reference</a></lI>
-</ul>
-
-<h2>Licensing</h2>
-
-<ul>
-	<li><a href="license/licensing-guidelines.html">Licensing
-	guidelines</a></lI>
-	<li><a href="license/license.txt">License text</a></lI>
-	<li><a href="http://www.itmill.com/">Prices and purchase</a></li>
-</ul>
+</div>
 
 <h2>Support</h2>
 
+<div class="front-page-box">
 (where to find)
+</div>
+
+</td><td width="50%" valign="top">
+
+<h2>Contents</h2>
+
+<div class="front-page-box">
+<b>Library</b><br/>
+<ul>
+<li><a href="lib/${}.html">Toolkit JAR</a></li>
+<li><a href="lib/${}.html">Toolkit Source JAR</a></li>
+<li><a href="lib/ajax-themes">AJAX themes</a></li>
+<li><a href="lib/web-themes">Web themes</a></li>
+</ul>
+
+<b>Documentation</b><br/>
+
+<ul>
+<li><a href="doc/manual/index.html">Manual</a>
+<uL><li><a href="doc/manual/ch01.html">Introduction</a></li>
+<li><a href="doc/manual/ch01s02.html">Example application walkthrough</a></li>
+<li><a href="doc/manual/ch01s03.html">Development environment setup</a></li>
+</li></ul>
+<li><a href="doc/api/index.html">API Documentation</a></li>
+</ul>
+
+<b>Examples</b><br/>
+
+<ul>
+<li><a href="demo/src">Demo application sources</a></li>
+<li><a href="demo/enably-toolkit.war">Demo WAR-package</a></li>
+</ul>
+</div>
+
+<h2>License</h2>
+<div class="front-page-box">
+<ul>
+	<li><a href="licensing-guidelines.html">Licensing
+	guidelines</a></lI>
+	<li><a href="license.txt">License</a></lI>
+	<li><a href="http://www.itmill.com/">Prices and purchase</a></li>
+</ul>
+</div>
+
+</td></tr></table>
+
 
 </body>
 </head>
