--- a/licensing-guidelines.html
+++ b/licensing-guidelines.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-<title>Millstone Licensing Guidelines</title>
-<link href="doc/manual/html-style/local.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="doc/manual/html-style/style.js"></script>
+<title>Enably Toolkit Licensing Guidelines</title>
 </head>
 <body>
 
+<script type="text/javascript" src="doc/manual/html-style/style.js"></script><script type="text/javascript">style('doc/manual/html-style');</script>
 
 <b><pre>[ DRAFTING - 1.10.2006 Joonas ]</pre></b>
 
