svn changeset:73 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -12,19 +12,38 @@
 <h2>Intro</h2>
 
 <div class="front-page-box">
-(what is enably toolkit)
+Enably Toolkit allows easy creation of first class user interfaces (UI) for <a href="http://java.sun.com/" target="new">Java-based</a> programs. 
+UI can be programmed in Java with easy to learn <a href="doc/api/index.html">API</a>	 and the toolkit takes care of 
+creating stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> UI.
+
+<br/><br/>
+
+AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/" target="new">
+Internet Explorer</a> 5.5-7, <a href="http://www.mozilla.com/firefox/" target="new">
+Firefox</a> 1-2 and <a href="http://www.apple.com/safari/" target="new">Safari</a> 2. 
+Older browsers are supported by automatically providing traditional web-based UI.
 </div>
 
 <h2>Demo</h2>
 
 <div class="front-page-box">
-(how to start up the demo)
+To get quick feel of the toolkit, just drop the included <a href="demo/enably-toolkit.war">
+enably-toolkit.war</a> demo to a Java-server. To get one,  
+ <a target="new" href="http://tomcat.apache.org/download-55.cgi">download free Apache Tomcat</a>. 
+Just follow the <a href="http://tomcat.apache.org/tomcat-5.5-doc/setup.html" target="new">
+installation instructions</a>, put <a href="demo/enably-toolkit.war">enably-toolkit.war</a> into webapps directory 
+and start the server. With default settings you should have demo running 
+<a href="http://localhost:8080/enably-toolkit/">here</a>.
+<br/><br/>
+You can also try the demo <a href="javascript:alert('where');">online</a>.
 </div>
 
 <h2>Support</h2>
 
 <div class="front-page-box">
-(where to find)
+Free <a href="javascript:alert('where');">support forum</a> is contains answers to most commonly 
+asked questions. IT Mill offers wide range
+of <a href="http://www.itmill.com/">professional support and service offering</a>. 
 </div>
 
 </td><td width="50%" valign="top">
