svn changeset:77 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 
 <ul>
 <li><a href="doc/manual/index.html">Manual</a>
-<uL><li><a href="doc/manual/ch01.html">Introduction</a></li>
+<ul><li><a href="doc/manual/ch01.html">Introduction</a></li>
 <li><a href="doc/manual/ch01s02.html">Example application walkthrough</a></li>
 <li><a href="doc/manual/ch01s03.html">Development environment setup</a></li>
 </li></ul>
 <li><a href="doc/api/index.html">API Documentation</a></li>
+<li><a href="javascript:alert('where');">User Forum</a> (online)
+<ul><li><a href="javascript:alert('where');">FAQ</a> (online)</li></ul>
+</li>
 </ul>
 
 <b>Examples</b><br/>
@@ -84,7 +87,7 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 	<li><a href="licensing-guidelines.html">Licensing
 	guidelines</a></lI>
 	<li><a href="license.txt">License</a></lI>
-	<li><a href="http://www.itmill.com/">Prices and purchase</a></li>
+	<li><a href="javascript:alert('where');">Prices and purchase</a></li>
 </ul>
 </div>
 
