--- a/index.html
+++ b/index.html
@@ -27,15 +27,12 @@ Older browsers are supported by automatically providing traditional web-based UI
 <h2>Demo</h2>
 
 <div class="front-page-box">
-To get quick feel of the toolkit, just drop the included <a href="demo/enably-toolkit.war">
-enably-toolkit.war</a> demo to a Java-server. To get one,  
- <a target="new" href="http://tomcat.apache.org/download-55.cgi">download free Apache Tomcat</a>. 
-Just follow the <a href="http://tomcat.apache.org/tomcat-5.5-doc/setup.html" target="new">
-installation instructions</a>, put <a href="demo/enably-toolkit.war">enably-toolkit.war</a> into webapps directory 
-and start the server. With default settings you should have demo running 
-<a href="http://localhost:8080/enably-toolkit/">here</a>.
+To get quick feel of the toolkit, run 
+<code>java -jar start.jar</code> 
+in demo-folder. Thanks to <a href="http://jetty.mortbay.org/" target="new">Jetty</a>, you should now have demo running 
+in <a href="http://localhost:8080/">http://localhost:8080/</a>.
 <br/><br/>
-You can also try the demo <a href="javascript:alert('where');">online</a>.
+You can also run the demo <a href="javascript:alert('where');">online</a>.
 </div>
 
 <h2>Support</h2>
