svn changeset:90 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <title>Enably Toolkit 4</title>
+<link href="doc/manual/html-style/local.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<script type="text/javascript" src="doc/manual/html-style/style.js"></script><script type="text/javascript">style('doc/manual/html-style');</script>
 
 <table width="100%" border="0">
 
@@ -50,8 +50,8 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 <div class="front-page-box">
 <b>Library</b><br/>
 <ul>
-<li><a href="lib/${}.html">Toolkit JAR</a></li>
-<li><a href="lib/${}.html">Toolkit Source JAR</a></li>
+<li><a href="lib/${lib-bin-jar-name}">Toolkit</a></li>
+<li><a href="lib/${lib-src-jar-name}">Toolkit Source</a></li>
 <li><a href="lib/ajax-themes">AJAX themes</a></li>
 <li><a href="lib/web-themes">Web themes</a></li>
 </ul>
@@ -90,6 +90,5 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 
 </td></tr></table>
 
-
 </body>
-</head>
+</html>
