--- a/licensing-guidelines.html
+++ b/licensing-guidelines.html
@@ -1,10 +1,9 @@
 <html>
 <head>
 <title>Enably Toolkit Licensing Guidelines</title>
+<link href="doc/manual/html-style/local.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
-<script type="text/javascript" src="doc/manual/html-style/style.js"></script><script type="text/javascript">style('doc/manual/html-style');</script>
 
 <b><pre>[ DRAFTING - 1.10.2006 Joonas ]</pre></b>
 
