--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,12 @@
 
 <h1>IT Mill Toolkit Demos</h1>
 
+<p>
 Feature Browser <a href="demo/features/web/">[web]</a> <a href="demo/features-ajax.html">[ajax]</a>
-
+</p>
+<p>Demo application (ajax) : <a href="demo/demoapp.html?app=calc">Calculator</a></p>
+<p>Demo application (ajax) : <a href="demo/demoapp.html?app=chat">Chat</a> (broken)</p>
+<p>Demo application (ajax) : <a href="demo/demoapp.html?app=hello">HelloWorld</a></p>
+<p>Demo application (ajax) : <a href="demo/demoapp.html?app=login">Login</a></p>
 </body>
 </html>
