--- a/src/com/itmill/toolkit/demo/package.html
+++ b/src/com/itmill/toolkit/demo/package.html
@@ -14,14 +14,14 @@ applications.</p>
 
 <p><ul>
 <li><strong>HelloWorld</strong> is the classic example which only prints the
-text "Hello, World!" on the screen.
+text "Hello, World!" on the screen.</li>
 <li><strong>LoginExample</strong> is almost as simple as HelloWorld. It
 demonstrates how to use the optional login procedure available to MillStone
-applications.
+applications.</li>
 <li><strong>Calc</strong> implements a calculator application which
 demonstrates how to build a bit more complicated user interface and how the
-application can interact with the usern through that interface.
-</u></p>
+application can interact with the usern through that interface.</li>
+</ul></p>
 
 <!-- <h2>Package Specification</h2> -->
 
