--- a/src/com/itmill/toolkit/package.html
+++ b/src/com/itmill/toolkit/package.html
@@ -14,22 +14,22 @@ The sub-packages from this point contain application components and utilities.
 
 <p>
 	<b>The Millstone library base is composed of the following packages:</b>
-	<ul>
-		<li>org.millstone.base.data</li><br/>
-		 <ul>A library of interfaces for transparently binding UI components to datasources.</ul>
-		<li>org.millstone.base.data.util</li>
-		 <ul>Basic implementations of data-intfaces and utilities for working with data-bound components.</ul>
-		<li>org.millstone.base.data.validator</li>
-		 <ul>Classes providing data-validation for Properties.</ul>
-		<li>org.millstone.base.event</li>
-		 <ul>Interfaces defining how to send and recieve events.</ul>
-		<li>org.millstone.base.service</li>
-		 <ul>Classes provding miscelaneous utility services.</ul>
-		<li>org.millstone.base.terminal</li>
-		 <ul>Classes and interfaces for implementing the terminal specific adapters.</ul>
-		<li>org.millstone.base.ui</li>
-		 <ul>The Millstone UI components.</ul>
-	</ul>
+	<dl>
+		<dt>org.millstone.base.data</dt>
+		 <dd>A library of interfaces for transparently binding UI components to datasources.</dd>
+		<dt>org.millstone.base.data.util</dt>
+		 <dd>Basic implementations of data-intfaces and utidtties for working with data-bound components.</dd>
+		<dt>org.millstone.base.data.vadtdator</dt>
+		 <dd>Classes providing data-vadtdation for Properties.</dd>
+		<dt>org.millstone.base.event</dt>
+		 <dd>Interfaces defining how to send and recieve events.</dd>
+		<dt>org.millstone.base.service</dt>
+		 <dd>Classes provding miscelaneous utidtty services.</dd>
+		<dt>org.millstone.base.terminal</dt>
+		 <dd>Classes and interfaces for implementing the terminal specific adapters.</dd>
+		<dt>org.millstone.base.ui</dt>
+		 <dd>The Millstone UI components.</dd>
+	</dl>
 		 
 		
 </p>
