--- a/src/com/itmill/toolkit/ui/package.html
+++ b/src/com/itmill/toolkit/ui/package.html
@@ -16,7 +16,7 @@
 
 <p>The general interface hierarchy looks like this:</p>
 
-<p><center><img src="doc-files/component_interfaces.gif"/> </center></p>
+<p style="text-align:center;><img src="doc-files/component_interfaces.gif"/> </p>
 
 <p><i>Note that the above picture includes only the main interfaces. This
 package includes several other lesser subinterfaces which are not
