--- a/src/com/itmill/toolkit/ui/package.html
+++ b/src/com/itmill/toolkit/ui/package.html
@@ -16,7 +16,7 @@
 
 <p>The general interface hierarchy looks like this:</p>
 
-<p style="text-align:center;><img src="doc-files/component_interfaces.gif"/> </p>
+<p style="text-align: center;><img src="doc-files/component_interfaces.gif"/> </p>
 
 <p><i>Note that the above picture includes only the main interfaces. This
 package includes several other lesser subinterfaces which are not
@@ -45,9 +45,9 @@ containers whose contents can be positioned arbitrarily.</p>
 
 <p>The actual component classes form a hierarchy like this:</p>
 
-<p><center><img src="doc-files/component_class_hierarchy.gif"/></center></p>
+<center><img src="doc-files/component_class_hierarchy.gif"/></center><br/>
 
-<p><center><i>Underlined classes are abstract.</i></center></p>
+<center><i>Underlined classes are abstract.</i></center>
 
 <p>At the top level is {@link org.millstone.base.ui.AbstractComponent}
 which implements the {@link org.millstone.base.ui.Component} interface. As
