--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,14 +4,82 @@
 </head>
 <body>
 
+<center>
+
 <h1>IT Mill Toolkit Demos</h1>
 
-<p>
-Feature Browser <a href="demo/features/web/">[web]</a> <a href="demo/features-ajax.html">[ajax]</a>
-</p>
-<p>Demo application (ajax) : <a href="demo/demoapp.html?app=calc">Calculator</a></p>
-<p>Demo application (ajax) : <a href="demo/demoapp.html?app=chat">Chat</a> (broken)</p>
-<p>Demo application (ajax) : <a href="demo/demoapp.html?app=hello">HelloWorld</a></p>
-<p>Demo application (ajax) : <a href="demo/demoapp.html?app=login">Login</a></p>
+<table border="1" cellpadding="30px">
+
+<tr><td>
+	<h2>Hello World</h2>
+	<ul>
+		<li><a href="demo/demoapp.html?app=hello">AJAX</a></li>
+		<li><a href="demo/demoapp.html?debug=1&app=hello">AJAX + debug</a></li>
+		<li><a href="demo/hello/web/">Traditional web</a></li>
+		<li><a href="src/com/itmill/toolkit/demo/Hello.java">Source</li>
+	</ul>
+</td><td>
+	<h2>Feature Browser</h2>
+	<ul>
+		<li><a href="demo/demoapp.html?app=features">AJAX</a></li>
+		<li><a href="demo/demoapp.html?debug=1&app=features">AJAX + debug</a></li>
+		<li><a href="demo/features/web/">Traditional web</a></li>
+		<li><a href="src/com/itmill/toolkit/demo/features/">Sources folder</li>
+	</ul>
+</td></tr>
+
+<tr><td>
+	<h2>Calculator</h2>
+	<ul>
+		<li><a href="demo/demoapp.html?app=calc">AJAX</a></li>
+		<li><a href="demo/demoapp.html?debug=1&app=calc">AJAX + debug</a></li>
+		<li><a href="demo/calc/web/">Traditional web</a></li>
+		<li><a href="src/com/itmill/toolkit/demo/Calc.java">Source</li>
+	</ul>
+</td><td>
+	<h2>Large Table</h2>
+	<ul>
+		<li><a href="demo/demoapp.html?app=table">AJAX</a></li>
+		<li><a href="demo/demoapp.html?debug=1&app=table">AJAX + debug</a></li>
+		<li><a href="demo/tableweb/">Traditional web</a></li>
+		<li><a href="src/com/itmill/toolkit/demo/table/TableDemoApplication.java">Source</li>
+	</ul>
+</td></tr>
+
+<tr><td>
+	<h2>Chat</h2>
+	<ul>
+		<li><a href="demo/demoapp.html?app=chat">AJAX</a></li>
+		<li><a href="demo/demoapp.html?debug=1&app=chat">AJAX + debug</a></li>
+		<li><a href="demo/chat/web/">Traditional web</a></li>
+		<li><a href="src/com/itmill/toolkit/demo/Chat.java">Source</li>
+	</ul>
+</td><td>
+	<h2>Login</h2>
+	<ul>
+		<li><a href="demo/demoapp.html?app=login">AJAX</a></li>
+		<li><a href="demo/demoapp.html?debug=1&app=login">AJAX + debug</a></li>
+		<li><a href="demo/login/web/">Traditional web</a></li>
+		<li><a href="src/com/itmill/toolkit/demo/Login.java">Source</li>
+	</ul>
+</td></tr>
+
+<tr><td>
+	<h2>GO-game</h2>
+	<ul>
+		<li><a href="demo/demoapp.html?app=gogame">AJAX</a></li>
+		<li><a href="demo/demoapp.html?debug=1&app=gogame">AJAX + debug</a></li>
+		<li><a href="demo/gogame/web/">Traditional web</a></li>
+		<li><a href="src/com/itmill/toolkit/demo/gogame/Board.java">Board component source</li>
+		<li><a href="src/com/itmill/toolkit/demo/gogame/Game.java">Game state model source</li>
+		<li><a href="src/com/itmill/toolkit/demo/gogame/Go.java">Application source</li>
+	</ul>
+</td><td>
+
+</td></tr>
+</table>
+
+</center>
+
 </body>
 </html>
