--- a/WebContent/demo/features-ajax.html
+++ b/WebContent/demo/features-ajax.html
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 	<head>
- 		<title>Millstone Ajax Client </title>
+ 		<title>IT Mill Toolkit Ajax Client </title>
  		
 		<!-- These are the "DefaultTheme" related CSS and JS files -->
 		<script src="../client/client.js" type="text/javascript"></script>
@@ -28,7 +28,7 @@
 			var baseUrl = document.location.href.split("features-ajax.html")[0];
 					
 			// Create ajax-client for the application
-			var client = new MillstoneAjaxClient(
+			var client = new ITMillToolkitClient(
 				document.getElementById('ajax-window'),
 				baseUrl + "features/ajax/", 
 				baseUrl + "../client/",
