--- a/index.html
+++ b/index.html
@@ -60,13 +60,17 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 
 <ul>
 <li><a href="doc/manual/index.html">Manual</a>
-<ul><li><a href="doc/manual/ch01.html">Introduction</a></li>
-<li><a href="doc/manual/ch01s02.html">Example application walkthrough</a></li>
-<li><a href="doc/manual/ch01s03.html">Development environment setup</a></li>
-</li></ul>
+	<ul>
+		<li><a href="doc/manual/ch01.html">Introduction</a></li>
+		<li><a href="doc/manual/ch01s02.html">Example application walkthrough</a></li>
+		<li><a href="doc/manual/ch01s03.html">Development environment setup</a></li>
+	</ul>
+</li>
 <li><a href="doc/api/index.html">API Documentation</a></li>
 <li><a href="javascript:alert('where');">User Forum</a> (online)
-<ul><li><a href="javascript:alert('where');">FAQ</a> (online)</li></ul>
+	<ul>
+	<li><a href="javascript:alert('where');">FAQ</a> (online)</li>
+	</ul>
 </li>
 </ul>
 
