--- a/WebContent/demo/demoapp.html
+++ b/WebContent/demo/demoapp.html
@@ -44,7 +44,7 @@
 			// Create ajax-client for the application
 			var client = new ITMillToolkitClient(
 				document.getElementById('ajax-window'),		// Element where to put main window
-				baseUrl + app + "/ajax/", 					// Adapter servlet URL (see WEB-INF/web.xml)
+				baseUrl + app + "/UIDL/", 					// Adapter servlet URL (see WEB-INF/web.xml)
 				baseUrl + "../client/",						// Base directory for the client
 				document.getElementById('ajax-wait'));		// Element to show while loading
 				
