--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,17 +13,17 @@
 <tr><td>
 	<h2>Hello World</h2>
 	<ul>
-		<li><a href="demo/demoapp.html?app=hello">AJAX</a></li>
-		<li><a href="demo/demoapp.html?debug=1&app=hello">AJAX + debug</a></li>
-		<li><a href="demo/hello/web/">Traditional web</a></li>
+		<li><a href="demoapp.html?app=hello">AJAX</a></li>
+		<li><a href="demoapp.html?debug=1&app=hello">AJAX + debug</a></li>
+		<li><a href="hello/">Traditional web</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/Hello.java">Source</li>
 	</ul>
 </td><td>
 	<h2>Feature Browser</h2>
 	<ul>
-		<li><a href="demo/demoapp.html?app=features">AJAX</a></li>
-		<li><a href="demo/demoapp.html?debug=1&app=features">AJAX + debug</a></li>
-		<li><a href="demo/features/web/">Traditional web</a></li>
+		<li><a href="demoapp.html?app=features">AJAX</a></li>
+		<li><a href="demoapp.html?debug=1&app=features">AJAX + debug</a></li>
+		<li><a href="features/">Traditional web</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/features/">Sources folder</li>
 	</ul>
 </td></tr>
@@ -31,17 +31,17 @@
 <tr><td>
 	<h2>Calculator</h2>
 	<ul>
-		<li><a href="demo/demoapp.html?app=calc">AJAX</a></li>
-		<li><a href="demo/demoapp.html?debug=1&app=calc">AJAX + debug</a></li>
-		<li><a href="demo/calc/web/">Traditional web</a></li>
+		<li><a href="demoapp.html?app=calc">AJAX</a></li>
+		<li><a href="demoapp.html?debug=1&app=calc">AJAX + debug</a></li>
+		<li><a href="calc/">Traditional web</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/Calc.java">Source</li>
 	</ul>
 </td><td>
 	<h2>Large Table</h2>
 	<ul>
-		<li><a href="demo/demoapp.html?app=table">AJAX</a></li>
-		<li><a href="demo/demoapp.html?debug=1&app=table">AJAX + debug</a></li>
-		<li><a href="demo/tableweb/">Traditional web</a></li>
+		<li><a href="demoapp.html?app=table">AJAX</a></li>
+		<li><a href="demoapp.html?debug=1&app=table">AJAX + debug</a></li>
+		<li><a href="table">Traditional web</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/table/TableDemoApplication.java">Source</li>
 	</ul>
 </td></tr>
@@ -49,17 +49,17 @@
 <tr><td>
 	<h2>Chat</h2>
 	<ul>
-		<li><a href="demo/demoapp.html?app=chat">AJAX</a></li>
-		<li><a href="demo/demoapp.html?debug=1&app=chat">AJAX + debug</a></li>
-		<li><a href="demo/chat/web/">Traditional web</a></li>
+		<li><a href="demoapp.html?app=chat">AJAX</a></li>
+		<li><a href="demoapp.html?debug=1&app=chat">AJAX + debug</a></li>
+		<li><a href="chat/">Traditional web</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/Chat.java">Source</li>
 	</ul>
 </td><td>
 	<h2>Login</h2>
 	<ul>
-		<li><a href="demo/demoapp.html?app=login">AJAX</a></li>
-		<li><a href="demo/demoapp.html?debug=1&app=login">AJAX + debug</a></li>
-		<li><a href="demo/login/web/">Traditional web</a></li>
+		<li><a href="demoapp.html?app=login">AJAX</a></li>
+		<li><a href="demoapp.html?debug=1&app=login">AJAX + debug</a></li>
+		<li><a href="login/">Traditional web</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/Login.java">Source</li>
 	</ul>
 </td></tr>
@@ -67,9 +67,9 @@
 <tr><td>
 	<h2>GO-game</h2>
 	<ul>
-		<li><a href="demo/demoapp.html?app=gogame">AJAX</a></li>
-		<li><a href="demo/demoapp.html?debug=1&app=gogame">AJAX + debug</a></li>
-		<li><a href="demo/gogame/web/">Traditional web</a></li>
+		<li><a href="demoapp.html?app=gogame">AJAX</a></li>
+		<li><a href="demoapp.html?debug=1&app=gogame">AJAX + debug</a></li>
+		<li><a href="gogame/">Traditional web</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/gogame/Board.java">Board component source</li>
 		<li><a href="src/com/itmill/toolkit/demo/gogame/Game.java">Game state model source</li>
 		<li><a href="src/com/itmill/toolkit/demo/gogame/Go.java">Application source</li>
