--- a/licensing-guidelines.html
+++ b/licensing-guidelines.html
@@ -5,46 +5,44 @@
 </head>
 <body>
 
-<b><pre>[ DRAFTING - 1.10.2006 Joonas ]</pre></b>
+<h1>IT Mill Toolkit - Licensing Guidelines</h1>
 
-<h1>Millstone Licensing Guidelines</h1>
-
-Millstone follows the following rules of thumb for its licensing:
+Licensing in nutshell:
 <ul>
 	<li>Free for learning, development and testing</li>
-	<li>Commercial deployment license is required for deploying any
-	program that uses Millstone libraries to production use</li>
-	<li>For distributing Millstone libraries as a part of your own
-	product, there is two alternatives:
-	<li>Purchasing commercial deployment licenses for each deployed
-	copy of the product.</li>
-	<li>If you plan to deploy at least 5 copies of the product, you
-	can contact IT Mill Ltd for OEM-license tailored for your products
-	needs.</li>
+	<li>Free for small production deployments (max 4 concurrent active users per server)</li>
+	<li>Commercial license is required for larger production environment</li>
+	<li>For distributing IT Mill Toolkit as a part of your own
+	product, either purchase suitable commercial deployment licenses or
+	contact us for OEM-license tailored for your needs.</li>
 </ul>
 
-<h3>When I can use Millstone for free?</h3>
+<h3>When I can use IT Mill Toolkit for free?</h3>
 
-Development of applications and products using Millstone tools and
-libraries is complitely free. Furthermore, you can deploy the developed
-program for testing and validation at the development time. Any
-production (or real) use of the deployed program with Millstone
-libraries requires commercial deployment license.
+<p>Application development is complitely free. Furthermore, you can deploy 
+the developed application for testing and validation at the development time.</p>
 
-<h3>When I must obtain a commercial license for Millstone</h3>
+<p>You can obtain a free license for production use in small workgroups from
+<a href="http://www.itmill.com/">IT Mill License store</a>. This license 
+covers use of 4 active users concurrently
+using the application in one server.</p>
 
-A deployment license is required for each deployed copy of a program
+<h3>When I must obtain a commercial license?</h3>
+
+<p>A commercial license must be obtained for production use of the 
+applications that use IT Mill Toolkit libraries. Free and low-cost license
+alternatives for limited number of concurrent users are available.</p>
+
+<p>A deployment license is required for each deployed copy of a program
 that uses Millstone libraries. To be more exact, each Java Virtual
-Machine (JVM) that runs a program that uses Millstone libraries, must an
-unique commercial deployment license. For example, if the program is
+Machine (JVM) that runs a program that uses IT Mill Toolkit libraries, must have an
+unique deployment license. For example, if the program is
 deployed to multiple servers (for load balancing or other reasons), each
-server needs an unique license. Deployment for testing the program
-during development phase is permitted without a license if the deployed
-program is not used for any production or real use.
+server needs an unique license.</p>
 
 <h2>Purchasing Commercial License</h2>
 
-<p>Millstone deployment licenses can be purchased online from <a
+<p>Deployment licenses can be purchased online from <a
 	href="http://www.itmill.com/">IT Mill Ltd</a>.</p>
 
 <p>If you are interested in OEM-license for your product, please
@@ -52,18 +50,30 @@ contact sales at <a href="http://www.itmill.com/">IT Mill Ltd</a>.</p>
 
 <h2>License terms</h2>
 
-<p>The actual license text is in <a href="mcl.txt">mcl.txt</a>.</p>
+<p>The actual legal license text is in <a href="license.txt">license.txt</a>.</p>
 
-<h2>Free Open Source Edition?</h2>
+<h2>License files?</h2>
 
-<p>The previous version 3 of Millstone library was licensed with
-LGPL-license. The new AJAX edition of the library, version 4, is only
-licensed with commercial license. The latest free release (version 3.1)
-can still be found from sourceforge.</p>
+<p>Technically license is stored as itmill-toolkit-license.xml -file, that is usually
+store in WEB-INF -directory of the web-application. The license file 
+contains information about the scope and limitations of the lisence in fairly readable
+form, so you might want to check the file contents. Toolkit package is shipped with
+unlimited license for development and testing purposes.</p>
+
+<h2>Open Source Edition?</h2>
+
+<p>The previous version 3 of the product was called Millstone User Interface Library. 
+Millstone library was licensed with very liberal LGPL-license. The new version 4 of 
+the library, is not licensed with open source license. The latest free release of 
+Millstone User Interface Library (version 3.1) can still be found from sourceforge.</p>
+
+<p>Why did we change the license? Putting a clear transparent pricing model on the 
+product makes our customers decision-making easier. They know how much they are
+paying for and what whey get for their money.</p>
 
 <h2>Educational use</h2>
 
-<p>If you want to use Millstone for teaching programming, web
+<p>If you want to use the IT Mill Toolkit for teaching programming, web
 development or user interface design, you can apply for educational
 license by contacting sales at <a href="http://www.itmill.com/">IT
 Mill Ltd</a>.</p>
