Added debug and mode-versions for feature -browser
svn changeset:209 branch:toolkit

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,6 +20,10 @@
 	<h2>Feature Browser</h2>
 	<ul>
 		<li><a href="features/">Autodetected mode</a></li>
+		<li><a href="features/?renderingMode=uidl">AJAX-based UIDL-mode</a></li>
+		<li><a href="features/?renderingMode=uidl&debug=true">AJAX-based UIDL-mode (with debug window)</a></li>
+		<li><a href="features/?renderingMode=xslt">XSLT mode for older browsers</a></li>
+		<li><a href="features/?renderingMode=xslt&debug=true">XSLT mode for older browsers (with debug window)</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/features/">Sources folder</li>
 	</ul>
 </td></tr>
