Added mattis ajax chat
svn changeset:213 branch:toolkit

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -45,7 +45,8 @@
 <tr><td>
 	<h2>Chat</h2>
 	<ul>
-		<li><a href="chat/">Autodetected mode</a></li>
+		<li><a href="ajaxchat/">Autodetected chat</a></li>
+		<li><a href="chat/?mode=uidl">Web chat using http-stream</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/Chat.java">Source</li>
 	</ul>
 </td><td>
