--- a/src/com/itmill/toolkit/data/util/package.html
+++ b/src/com/itmill/toolkit/data/util/package.html
@@ -6,24 +6,24 @@
 
 <body bgcolor="white">
 
-<p>Provides various utility classes that implement the MillStone data layer
+<p>Provides various utility classes that implement the data layer
 functionality.</p>
 
-<p>The first {@link org.millstone.base.data.Property Property} class,
-{@link org.millstone.base.data.util.ObjectProperty ObjectProperty}, provides
+<p>The first {@link com.itmill.toolkit.data.Property Property} class,
+{@link com.itmill.toolkit.data.util.ObjectProperty ObjectProperty}, provides
 a simple class containing a typed data value. The second,
-{@link org.millstone.base.data.util.MethodProperty MethodProperty}, provides
+{@link com.itmill.toolkit.data.util.MethodProperty MethodProperty}, provides
 a way to bind a field of an object to the Property interface using the
 accessor methods for the field.</p>
 
-<p>The next level of the MillStone data layer, the
-{@link org.millstone.base.data.Item Item}, is implemented by 
-{@link org.millstone.base.data.util.BeanItem BeanItem}, though it is only a
+<p>The next level of the data layer, the
+{@link com.itmill.toolkit.data.Item Item}, is implemented by 
+{@link com.itmill.toolkit.data.util.BeanItem BeanItem}, though it is only a
 simple wrapper to the former to provide the Item interface for any regular
 Java Bean.</p>
 
-<p>The third level, the {@link org.millstone.base.data.Container Container},
-has several implementations in the {@link org.millstone.base.data.util}
+<p>The third level, the {@link com.itmill.toolkit.data.Container Container},
+has several implementations in the {@link com.itmill.toolkit.data.util}
 package.</p>
 
 <!-- <h2>Package Specification</h2> -->
