--- a/src/com/itmill/toolkit/package.html
+++ b/src/com/itmill/toolkit/package.html
@@ -14,19 +14,19 @@ The sub-packages from this point contain application components and utilities.
 
 	<b>The Millstone library base is composed of the following packages:</b>
 	<dl>
-		<dt>org.millstone.base.data</dt>
+		<dt>com.itmill.toolkit.data</dt>
 		 <dd>A library of interfaces for transparently binding UI components to datasources.</dd>
-		<dt>org.millstone.base.data.util</dt>
+		<dt>com.itmill.toolkit.data.util</dt>
 		 <dd>Basic implementations of data-intfaces and utidtties for working with data-bound components.</dd>
-		<dt>org.millstone.base.data.vadtdator</dt>
+		<dt>com.itmill.toolkit.data.vadtdator</dt>
 		 <dd>Classes providing data-vadtdation for Properties.</dd>
-		<dt>org.millstone.base.event</dt>
+		<dt>com.itmill.toolkit.event</dt>
 		 <dd>Interfaces defining how to send and recieve events.</dd>
-		<dt>org.millstone.base.service</dt>
+		<dt>com.itmill.toolkit.service</dt>
 		 <dd>Classes provding miscelaneous utidtty services.</dd>
-		<dt>org.millstone.base.terminal</dt>
+		<dt>com.itmill.toolkit.terminal</dt>
 		 <dd>Classes and interfaces for implementing the terminal specific adapters.</dd>
-		<dt>org.millstone.base.ui</dt>
+		<dt>com.itmill.toolkit.ui</dt>
 		 <dd>The Millstone UI components.</dd>
 	</dl>
 
