--- a/src/com/itmill/toolkit/ui/package.html
+++ b/src/com/itmill/toolkit/ui/package.html
@@ -23,22 +23,22 @@ package includes several other lesser subinterfaces which are not
 significant in this scope. The interfaces not appearing here are documented
 with the classes that define them.</i></p>
 
-<p>The {@link org.millstone.base.ui.Component} interface is the top-level
+<p>The {@link com.itmill.toolkit.ui.Component} interface is the top-level
 interface which must be implemented by all UI components. It defines the
 common properties of the components and how the framework will handle
-them. Most simple components (like {@link org.millstone.base.ui.Button} for
+them. Most simple components (like {@link com.itmill.toolkit.ui.Button} for
 example} won't need to implement the lower level interfaces described
 below. Note that the classes and interfaces required by the component event
-framework are defined in {@link org.millstone.base.ui.Component}.</p>
+framework are defined in {@link com.itmill.toolkit.ui.Component}.</p>
 
 <p>The next level in the component hierarchy are the classes implementing
-the {@link org.millstone.base.ui.ComponentContainer} interface. It adds the
+the {@link com.itmill.toolkit.ui.ComponentContainer} interface. It adds the
 capacity to contain other components to
-{@link org.millstone.base.ui.Component} with a simple API.</p>
+{@link com.itmill.toolkit.ui.Component} with a simple API.</p>
 
-<p>The third and last level is the {@link org.millstone.base.ui.Layout},
+<p>The third and last level is the {@link com.itmill.toolkit.ui.Layout},
 which adds the concept of location to the components contained in a
-{@link org.millstone.base.ui.ComponentContainer}. It can be used to create
+{@link com.itmill.toolkit.ui.ComponentContainer}. It can be used to create
 containers whose contents can be positioned arbitrarily.</p>
 
 <p><strong>Component class hierarchy</strong></p>
@@ -49,17 +49,17 @@ containers whose contents can be positioned arbitrarily.</p>
 
 <center><i>Underlined classes are abstract.</i></center>
 
-<p>At the top level is {@link org.millstone.base.ui.AbstractComponent}
-which implements the {@link org.millstone.base.ui.Component} interface. As
+<p>At the top level is {@link com.itmill.toolkit.ui.AbstractComponent}
+which implements the {@link com.itmill.toolkit.ui.Component} interface. As
 the name suggests it is abstract, but it does include a default
 implementation for all methods defined in <code>Component</code> so that
 a component is free to override only those functionalities it needs.</p>
 
 <p>As seen in the picture, <code>AbstractComponent</code> serves as the
 superclass for several "real" components, but it also has a some abstract
-extensions. {@link org.millstone.base.ui.AbstractComponentContainer} serves
+extensions. {@link com.itmill.toolkit.ui.AbstractComponentContainer} serves
 as the root class for all components (for example, panels and windows) who
-can contain other components. {@link org.millstone.base.ui.AbstractField},
+can contain other components. {@link com.itmill.toolkit.ui.AbstractField},
 on the other hand, implements several interfaces to provide a base class for
 components that are used for data display and manipulation.</p>
 
