Millstone -> IT Mill toolkit
svn changeset:218 branch:toolkit

--- a/src/com/itmill/toolkit/demo/package.html
+++ b/src/com/itmill/toolkit/demo/package.html
@@ -7,17 +7,14 @@
 
 <!-- Package summary here -->
 
-<p>Provides several fully functional MillStone example applications. These
-highlight certain aspects of the MillStone framework and how it can be
-exploited to produce simple, elegant yet powerful user interface driven
+<p>Provides several fully functional IT Mill Toolkit example applications. These
+highlight certain aspects of the toolkit and how it can be
+used to produce simple, elegant yet powerful user interface driven
 applications.</p>
 
 <ul>
 <li><strong>HelloWorld</strong> is the classic example which only prints the
 text "Hello, World!" on the screen.</li>
-<li><strong>LoginExample</strong> is almost as simple as HelloWorld. It
-demonstrates how to use the optional login procedure available to MillStone
-applications.</li>
 <li><strong>Calc</strong> implements a calculator application which
 demonstrates how to build a bit more complicated user interface and how the
 application can interact with the usern through that interface.</li>
