Millstone -> IT Mill Toolkit
svn changeset:220 branch:toolkit

--- a/src/com/itmill/toolkit/event/package.html
+++ b/src/com/itmill/toolkit/event/package.html
@@ -7,16 +7,16 @@
 
 <!-- Package summary here -->
 
-<p>Provides classes and interfaces for the MillStone inheritable event
+<p>Provides classes and interfaces for the inheritable event
 model. The model supports inheritable events and a flexible way of
 registering and unregistering event listeners. It's a fundamental building
-block of the MillStone framework, and as it is included in
+block of the IT Mill Toolkit, and as it is included in
 {@link com.itmill.toolkit.ui.AbstractComponent}, all UI components
 automatically support it.</p>
 
 <h2>Package Specification</h2>
 
-<p>The core of the MillStone event model is the inheritable event class
+<p>The core of the event model is the inheritable event class
 hierarchy, and the {@link com.itmill.toolkit.event.EventRouter EventRouter}
 which provide a simple, ubiquitous mechanism to transport events to all
 interested parties.</p>
