--- a/src/com/itmill/toolkit/service/package.html
+++ b/src/com/itmill/toolkit/service/package.html
@@ -7,8 +7,8 @@
 
 <!-- Package summary here -->
 
-<p>Provides some general service classes used throughout a MillStone
-application.</p>
+<p>Provides some general service classes used throughout a IT Mill Toolkit
+based applications.</p>
 
 <!-- <h2>Package Specification</h2> -->
 
