--- a/src/com/itmill/toolkit/package.html
+++ b/src/com/itmill/toolkit/package.html
@@ -5,29 +5,31 @@
 
 <body bgcolor="white">
 
-<p>This package is the base of the Millstone library. The base package 
-contains the Application class, the starting point of the Millstone Terminal Independent application.
+<p>This package is the base of the IT Mill Toolkit. The base package 
+contains the Application class, the starting point of any aplication that uses IT Mill Toolkit.
 The sub-packages from this point contain application components and utilities.
 </p>
 
 <h2>Package Specification</h2>
 
-	<b>The Millstone library base is composed of the following packages:</b>
+	<b>IT Mill Toolkit is composed of the following packages:</b>
 	<dl>
 		<dt>com.itmill.toolkit.data</dt>
 		 <dd>A library of interfaces for transparently binding UI components to datasources.</dd>
 		<dt>com.itmill.toolkit.data.util</dt>
 		 <dd>Basic implementations of data-intfaces and utidtties for working with data-bound components.</dd>
-		<dt>com.itmill.toolkit.data.vadtdator</dt>
-		 <dd>Classes providing data-vadtdation for Properties.</dd>
+		<dt>com.itmill.toolkit.data.validator</dt>
+		 <dd>Classes providing data-validation for Properties.</dd>
 		<dt>com.itmill.toolkit.event</dt>
 		 <dd>Interfaces defining how to send and recieve events.</dd>
 		<dt>com.itmill.toolkit.service</dt>
 		 <dd>Classes provding miscelaneous utidtty services.</dd>
 		<dt>com.itmill.toolkit.terminal</dt>
 		 <dd>Classes and interfaces for implementing the terminal specific adapters.</dd>
+		<dt>com.itmill.toolkit.terminal.web</dt>
+		 <dd>Classes that implement support both for AJAX-based and more limited web browsers.</dd>
 		<dt>com.itmill.toolkit.ui</dt>
-		 <dd>The Millstone UI components.</dd>
+		 <dd>UI components.</dd>
 	</dl>
 
 <!-- Put @see and @since tags down here. -->
