--- a/src/com/itmill/toolkit/terminal/web/package.html
+++ b/src/com/itmill/toolkit/terminal/web/package.html
@@ -8,8 +8,7 @@
 
 <!-- Package summary here -->
 
-<p>Provides the functionality of the MillStone Web Adapter, which adapts the  
-MillStone applications to Web standards. (FIXME: We need a rather more extensive lithany here.)</p>
+<p>This package implement web terminal for both AJAX-capable and more limited web browsers.</p>
 
 <h2>Package Specification</h2>
 
