Remove links to SUN and Jetty pages, they are self explanatory. It is probably an mistake from user if they hit those links. Keep links to substance (AJAX and our product related material only)
Replaced enably with toolkit

+ other context changes

svn changeset:240 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
 <tr><td width="50%" valign="top">
 
-<h2>Intro</h2>
+<h2>Introduction</h2>
 
 <div class="front-page-box">
-IT Mill Toolkit allows easy creation of first class user interfaces (UI) for <a href="http://java.sun.com/" target="new">Java-based</a> programs. 
-UI can be programmed in Java with easy to learn <a href="doc/api/index.html">API</a>	 and the toolkit takes care of 
+IT Mill Toolkit allows easy creation of first class user interfaces (UI) for Java-based programs. 
+UI can be programmed in Java with easy to learn <a href="doc/api/index.html">API</a> and the toolkit takes care of 
 creating stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> UI.
 
 <br/><br/>
 
-AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/" target="new">
+AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/default.mspx" target="new">
 Internet Explorer</a> 5.5-7, <a href="http://www.mozilla.com/firefox/" target="new">
 Firefox</a> 1-2 and <a href="http://www.apple.com/safari/" target="new">Safari</a> 2. 
 Older browsers are supported by automatically providing traditional web-based UI.
@@ -27,19 +27,18 @@ Older browsers are supported by automatically providing traditional web-based UI
 <h2>Demo</h2>
 
 <div class="front-page-box">
-To get quick feel of the toolkit, run 
-<code>java -jar start.jar</code> 
-in demo-folder. Thanks to <a href="http://jetty.mortbay.org/" target="new">Jetty</a>, you should now have demo running 
-in <a href="http://localhost:8888/">http://localhost:8888/</a>.
-<br/><br/>
-You can also run the demo <a href="javascript:alert('where');">online</a>.
+To get quick feel of the toolkit, execute 
+<code>demo/start.bat</code> on Windows or <code>demo/start.sh</code> on UNIX
+platform. You now have demo running in <a href="http://localhost:8888/">http://localhost:8888/</a>.
+<br/>
 </div>
 
 <h2>Support</h2>
 
 <div class="front-page-box">
-Free <a href="javascript:alert('where');">support forum</a> is contains answers to most commonly 
-asked questions. IT Mill offers wide range
+Free support forum contains answers to most commonly asked questions,
+it will be opened later. For the time being use
+<a href="mailto:support@itmill.com">support@itmill.com</a>. IT Mill offers wide range
 of <a href="http://www.itmill.com/">professional support and service offering</a>. 
 </div>
 
@@ -78,7 +77,7 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 
 <ul>
 <li><a href="demo/src">Demo application sources</a></li>
-<li><a href="demo/enably-toolkit.war">Demo WAR-package</a></li>
+<li><a href="demo/itmill-toolkit.war">Demo WAR-package</a></li>
 </ul>
 </div>
 
