--- a/index.html
+++ b/index.html
@@ -66,11 +66,6 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 	</ul>
 </li>
 <li><a href="doc/api/index.html">API Documentation</a></li>
-<li><a href="javascript:alert('where');">User Forum</a> (online)
-	<ul>
-	<li><a href="javascript:alert('where');">FAQ</a> (online)</li>
-	</ul>
-</li>
 </ul>
 
 <b>Examples</b><br/>
@@ -86,8 +81,8 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 <ul>
 	<li><a href="licensing-guidelines.html">Licensing
 	guidelines</a></lI>
-	<li><a href="license.txt">License</a></lI>
-	<li><a href="javascript:alert('where');">Prices and purchase</a></li>
+	<li><a href="license.pdf">License</a></lI>
+	<li>Prices and purchase from <a href="mailto:support@itmill.com">sales@itmill.com</a></li>
 </ul>
 </div>
 
