Changed text more user friendly. Got rid of XSLT, UIDL which raise unneccessary questions for new people.
Removed obsolete demos.

svn changeset:245 branch:toolkit

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,25 +6,55 @@
 
 <center>
 
-<h1>IT Mill Toolkit Demos</h1>
+<h1>IT Mill Toolkit Demo</h1>
 
-<table border="1" cellpadding="30px">
+<table width="90%" border="1" cellpadding="30px">
+
+<tr><td>
+        <h2>Feature Browser</h2>
+	<table cellpadding="5px">
+	  <tr>
+	    <td><a href="features/">Autodetected mode</a></td>
+	    <td>Let Toolkit automatically select best user interface
+technology.</td>
+	  </tr>
+	  <tr>
+	    <td><a href="features/?renderingMode=uidl">AJAX mode</a></td>
+            <td>Force AJAX-based user interface technology.</td>
+	  </tr>
+	  <tr>
+	    <td><a href="features/?renderingMode=uidl&debug=true">AJAX mode with debug</a></td>
+            <td>As above but with developer debug window</td>
+	  </tr>
+	  <tr>
+	    <td><a href="features/?renderingMode=xslt">Compatible mode</a></td>
+            <td>Force compatible (non-AJAX) user interface technology.</td>
+	  </tr>
+	  <tr>
+	    <td><a
+href="features/?renderingMode=xslt&debug=true">Compatible mode with
+debug</a></td>
+            <td>As above but with developer debug window</td>
+	  </tr>
+	  <tr>
+	    <td><a href="src/com/itmill/toolkit/demo/features/">Open
+sources folder</a></td>
+          </tr>
+	  <tr>
+	  <td></td>
+	  </tr>
+	</table>
+</table>
+
+<h1>IT Mill Toolkit Example Code</h1>
+
+<table width="90%" border="1" cellpadding="30px">
 
 <tr><td>
 	<h2>Hello World</h2>
 	<ul>
 		<li><a href="hello/">Autodetected mode</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/Hello.java">Source</li>
-	</ul>
-</td><td>
-	<h2>Feature Browser</h2>
-	<ul>
-		<li><a href="features/">Autodetected mode</a></li>
-		<li><a href="features/?renderingMode=uidl">AJAX-based UIDL-mode</a></li>
-		<li><a href="features/?renderingMode=uidl&debug=true">AJAX-based UIDL-mode (with debug window)</a></li>
-		<li><a href="features/?renderingMode=xslt">XSLT mode for older browsers</a></li>
-		<li><a href="features/?renderingMode=xslt&debug=true">XSLT mode for older browsers (with debug window)</a></li>
-		<li><a href="src/com/itmill/toolkit/demo/features/">Sources folder</li>
 	</ul>
 </td></tr>
 
@@ -34,40 +64,8 @@
 		<li><a href="calc/">Autodetected mode</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/Calc.java">Source</li>
 	</ul>
-</td><td>
-	<h2>Large Table</h2>
-	<ul>
-		<li><a href="table">Autodetected mode</a></li>
-		<li><a href="src/com/itmill/toolkit/demo/table/TableDemoApplication.java">Source</li>
-	</ul>
 </td></tr>
 
-<tr><td>
-	<h2>Chat</h2>
-	<ul>
-		<li><a href="ajaxchat/">Autodetected chat</a></li>
-		<li><a href="chat/?mode=uidl">Web chat using http-stream</a></li>
-		<li><a href="src/com/itmill/toolkit/demo/Chat.java">Source</li>
-	</ul>
-</td><td>
-	<h2>Login</h2>
-	<ul>
-		<li><a href="login/">Autodetected mode</a></li>
-		<li><a href="src/com/itmill/toolkit/demo/Login.java">Source</li>
-	</ul>
-</td></tr>
-
-<tr><td>
-	<h2>GO-game</h2>
-	<ul>
-		<li><a href="gogame/">Autodetected mode</a></li>
-		<li><a href="src/com/itmill/toolkit/demo/gogame/Board.java">Board component source</li>
-		<li><a href="src/com/itmill/toolkit/demo/gogame/Game.java">Game state model source</li>
-		<li><a href="src/com/itmill/toolkit/demo/gogame/Go.java">Application source</li>
-	</ul>
-</td><td>
-
-</td></tr>
 </table>
 
 </center>
