svn changeset:248 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Firefox</a> 1-2 and <a href="http://www.apple.com/safari/" target="new">Safari</
 Older browsers are supported by automatically providing traditional web-based UI.
 </div>
 
-<h2>Demo</h2>
+<h2>Demo and sample code</h2>
 
 <div class="front-page-box">
 To get quick feel of the toolkit, execute 
