Example => Sample as in /index.html
svn changeset:256 branch:toolkit

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -46,7 +46,7 @@ sources folder</a></td>
 	</table>
 </table>
 
-<h1>IT Mill Toolkit Example Code</h1>
+<h1>IT Mill Toolkit Sample Code</h1>
 
 <table width="90%" border="1" cellpadding="30px">
 
