--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,20 +19,20 @@
 technology.</td>
 	  </tr>
 	  <tr>
-	    <td><a href="features/?renderingMode=uidl">AJAX mode</a></td>
+	    <td><a href="features/?renderingMode=ajax">AJAX mode</a></td>
             <td>Force AJAX-based user interface technology.</td>
 	  </tr>
 	  <tr>
-	    <td><a href="features/?renderingMode=uidl&debug=true">AJAX mode with debug</a></td>
+	    <td><a href="features/?renderingMode=ajax&debug=true">AJAX mode with debug</a></td>
             <td>As above but with developer debug window</td>
 	  </tr>
 	  <tr>
-	    <td><a href="features/?renderingMode=xslt">Compatible mode</a></td>
+	    <td><a href="features/?renderingMode=html">HTML mode</a></td>
             <td>Force compatible (non-AJAX) user interface technology.</td>
 	  </tr>
 	  <tr>
 	    <td><a
-href="features/?renderingMode=xslt&debug=true">Compatible mode with
+href="features/?renderingMode=html&debug=true">HTML mode with
 debug</a></td>
             <td>As above but with developer debug window</td>
 	  </tr>
@@ -53,7 +53,7 @@ sources folder</a></td>
 <tr><td>
 	<h2>Hello World</h2>
 	<ul>
-		<li><a href="hello/">Autodetected mode</a></li>
+		<li><a href="hello/">HelloWorld application (Autodetected rendering mode)</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/HelloWorld.java">Source</li>
 	</ul>
 </td></tr>
@@ -61,7 +61,7 @@ sources folder</a></td>
 <tr><td>
 	<h2>Calculator</h2>
 	<ul>
-		<li><a href="calc/">Autodetected mode</a></li>
+		<li><a href="calc/">Calc application (Autodetected rendering mode)</a></li>
 		<li><a href="src/com/itmill/toolkit/demo/Calc.java">Source</li>
 	</ul>
 </td></tr>
