Unified @author to IT Mill Ltd. Language fixes Replaced Millstone variations with IT Mill Toolkit / Toolkit
svn changeset:279 branch:toolkit

--- a/licensing-guidelines.html
+++ b/licensing-guidelines.html
@@ -34,7 +34,7 @@ applications that use IT Mill Toolkit libraries. Free and low-cost license
 alternatives for limited number of concurrent users are available.</p>
 
 <p>A deployment license is required for each deployed copy of a program
-that uses Millstone libraries. To be more exact, each Java Virtual
+that uses Toolkit library. To be more exact, each Java Virtual
 Machine (JVM) that runs a program that uses IT Mill Toolkit libraries, must have an
 unique deployment license. For example, if the program is
 deployed to multiple servers (for load balancing or other reasons), each
