--- a/src/com/itmill/toolkit/ui/package.html
+++ b/src/com/itmill/toolkit/ui/package.html
@@ -23,7 +23,7 @@ package includes several other lesser subinterfaces which are not
 significant in this scope. The interfaces not appearing here are documented
 with the classes that define them.</i></p>
 
-<p>The {@link com.itmill.toolkit.ui.Component} interface is the top-level
+<p>The {@link com.itmill.toolkit.ui.Component) interface is the top-level
 interface which must be implemented by all UI components. It defines the
 common properties of the components and how the framework will handle
 them. Most simple components (like {@link com.itmill.toolkit.ui.Button} for
