--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>IT Mill Toolkit Demo</title>
+<title>IT Mill Toolkit Demo</title>
 </head>
 <body>
 
@@ -10,62 +10,72 @@
 
 <table width="90%" border="1" cellpadding="30px">
 
-<tr><td>
-        <h2>Feature Browser</h2>
-	<table cellpadding="5px">
-	  <tr>
-	    <td><a href="features/">Autodetected mode</a></td>
-	    <td>Let Toolkit automatically select best user interface
-technology.</td>
-	  </tr>
-	  <tr>
-	    <td><a href="features/?renderingMode=ajax">AJAX mode</a></td>
-            <td>Force AJAX-based user interface technology.</td>
-	  </tr>
-	  <tr>
-	    <td><a href="features/?renderingMode=ajax&debug=true">AJAX mode with debug</a></td>
-            <td>As above but with developer debug window</td>
-	  </tr>
-	  <tr>
-	    <td><a href="features/?renderingMode=html">HTML mode</a></td>
-            <td>Force compatible (non-AJAX) user interface technology.</td>
-	  </tr>
-	  <tr>
-	    <td><a
-href="features/?renderingMode=html&debug=true">HTML mode with
-debug</a></td>
-            <td>As above but with developer debug window</td>
-	  </tr>
-	  <tr>
-	    <td><a href="src/com/itmill/toolkit/demo/features/">Open
-sources folder</a></td>
-          </tr>
-	  <tr>
-	  <td></td>
-	  </tr>
-	</table>
+	<tr>
+		<td>
+		<h2>Feature Browser</h2>
+		<table cellpadding="5px">
+			<tr>
+				<td><a href="features/">Autodetected mode</a></td>
+				<td>Use AJAX if supported by browser, then fallback to HTML
+				mode.</td>
+			</tr>
+			<tr>
+				<td><a href="features/?renderingMode=ajax">AJAX mode</a></td>
+				<td>Select AJAX-based technology mode.</td>
+			</tr>
+			<tr>
+				<td><a href="features/?renderingMode=html">HTML mode</a></td>
+				<td>Select page based request/response technology mode.</td>
+			</tr>
+			<tr>
+				<td></td>
+			</tr>
+		</table>
 </table>
 
 <h1>IT Mill Toolkit Sample Code</h1>
 
 <table width="90%" border="1" cellpadding="30px">
 
-<tr><td>
-	<h2>Hello World</h2>
-	<ul>
-		<li><a href="hello/">HelloWorld application (Autodetected rendering mode)</a></li>
-		<li><a href="src/com/itmill/toolkit/demo/HelloWorld.java">Source</li>
-	</ul>
-</td></tr>
+	<tr>
+		<td>
+		<h2>Hello World</h2>
+		<table cellpadding="5px">
+			<tr>
+				<td><a href="hello/">Autodetected mode</a></td>
+				<td>Use AJAX if supported by browser, then fallback to HTML
+				mode.</td>
+			</tr>
+			<tr>
+				<td><a href="src/com/itmill/toolkit/demo/HelloWorld.java">Source
+				code</a></td>
+				<td>See source code how an simple Toolkit application is
+				created.</td>
+			</tr>
+		</table>
+		</td>
+	</tr>
 
-<tr><td>
-	<h2>Calculator</h2>
-	<ul>
-		<li><a href="calc/">Calc application (Autodetected rendering mode)</a></li>
-		<li><a href="src/com/itmill/toolkit/demo/Calc.java">Source</li>
-	</ul>
-</td></tr>
+	<tr>
+		<td>
+		<h2>Calculator</h2>
+		<ul>
+			<li><a href="calc/">Calc application (Autodetected rendering
+			mode)</a></li>
+			<li><a href="src/com/itmill/toolkit/demo/Calc.java">Source</li>
+		</ul>
+		</td>
+	</tr>
 
+</table>
+
+<h1>Notes</h1>
+
+<table width="90%" border="1" cellpadding="30px">
+	<tr>
+		<td>IT Mill recommends <a href="http://www.getfirebug.com/">firebug</a>
+		for web development, Toolkit supports it.</td>
+	</tr>
 </table>
 
 </center>
